# spec_tage_scl

./: .gitignore  CMakeLists.txt  README.md
include/: mbplib_compat_layer.hpp
include/tagescl/: loop_predictor.hpp  statistical_corrector.hpp  tage.hpp  tagescl.hpp  tagescl_configs.hpp  utils.hpp
include/tagescl/ifaces/champsim/: README.md  tagescl.cc
include/tagescl/ifaces/gem5/: BranchPredictor.py  README.md  tage_sc_l.cc  tage_sc_l.hh
include/tagescl/ifaces/mbplib/: README.md  tage_sc_l_sim_only.hpp
src/: mbplib_main.cpp  random_speculative_sbbt_sim.cpp
test/sbbt/: CMakeLists.txt  mbplib_sim_main.cpp  random_spec_sbbt_sim.cpp  wrong_path_sim.cpp
